--- a/pth.css
+++ b/pth.css
@@ -25,6 +25,11 @@ table tbody, .main_column, .sidebar, .box, .thin, .pad, #threadpoll, #poll {
 	color: #444;
 }
 
+.brackets {
+	background: #444;
+	border: 1px solid #000 #fff #fff #000;
+}
+
 /* Common elements */
 
 a {
@@ -128,6 +133,7 @@ ul.thin li { margin:0px 0px; padding:0px; }
 #wrapper {
 	padding: 0 0 0 0;
 }
+
 #header {
 	width: 950px;
 	margin: 0 auto 0 auto;
@@ -225,6 +231,7 @@ ul.thin li { margin:0px 0px; padding:0px; }
 #userinfo_major {
 }
 #userinfo_username {
+
 }
 #userinfo_stats {
 }
@@ -999,21 +1006,6 @@ tr.torrent .bookmark > a:after {
 
 #requests .forum_post textarea { /* overriding the inline 80-character monospace */
 	max-width: 409px;
-}
-
-.linkbox .brackets:before,
-.linkbox .brackets:after,
-.top10_quantity_links .brackets:before,
-.top10_quantity_links .brackets:after {
-	color: #FCFCFC;
-}
-
-#userinfo_username .brackets:before {
-	content: "[";
-}
-
-#userinfo_username .brackets:after {
-	content: "]";
 }
 
 .field_div {
