--- a/pth-upload-enhancer.css
+++ b/pth-upload-enhancer.css
@@ -49,3 +49,11 @@
         box-shadow: 0 2.5em 0 0;
     }
 }
+#upload #dnu_header + p + p,
+#title_tr input + p,
+#releasetype_tr + tr + tr,
+#genre_tags ~ ul,
+#musicbrainz_tr,
+#musicbrainz_popup {
+    display: none;
+}
