--- a/pth-upload-enhancer.css
+++ b/pth-upload-enhancer.css
@@ -6,49 +6,21 @@
     z-index: 10;
     text-align: center;
     padding: 8px;
-    border: 1px solid #aBaAa9;
+    border: 1px solid #800;
     position: relative;
     background: #800;
 }
-.pth-wait-indicator,
-.pth-wait-indicator:before,
-.pth-wait-indicator:after {
-    border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
-    animation-fill-mode: both;
-    animation: pth-wait 1.8s infinite ease-in-out;
+
+.pth-upload-drop-target.active {
+	background: linear-gradient(270deg, #800, #080);
+	background-size: 400% 400%;
+	animation: active .5s linear infinite;	
 }
-.pth-wait-indicator {
-    color: #ffffff;
-    font-size: 10px;
-    position: absolute;
-    top: -14px;
-    left: 264px;
-    transform: translateZ(0);
-    animation-delay: -0.16s;
+
+.pth-upload-drop-target.done {	
+	background: #080;
 }
-.pth-wait-indicator:before,
-.pth-wait-indicator:after {
-    content: '';
-    position: absolute;
-    top: 0;
-}
-.pth-wait-indicator:before {
-    left: -3.5em;
-    animation-delay: -0.32s;
-}
-.pth-wait-indicator:after {
-    left: 3.5em;
-}
-@keyframes pth-wait {
-    0%, 80%, 100% {
-        box-shadow: 0 2.5em 0 -1.3em;
-    }
-    40% {
-        box-shadow: 0 2.5em 0 0;
-    }
-}
+
 #upload #dnu_header + p + p,
 #title_tr input + p,
 #releasetype_tr + tr + tr,
@@ -56,4 +28,10 @@
 #musicbrainz_tr,
 #musicbrainz_popup {
     display: none;
+}
+
+@keyframes active { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
