--- a/pth-upload-enhancer.css
+++ b/pth-upload-enhancer.css
@@ -12,9 +12,8 @@
 }
 
 .pth-upload-drop-target.active {
-	background: linear-gradient(270deg, #800, #080);
-	background-size: 400% 400%;
-	animation: pth-active 1s linear infinite;	
+	background: linear-gradient(to right, #800 0%, #080 100%);
+	animation: pth-active 3s linear infinite;	
 }
 
 .pth-upload-drop-target.done {	
@@ -31,7 +30,9 @@
 }
 
 @keyframes pth-active { 
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0%{background: linear-gradient(to right, #800 0%, #080 100%)}
+    25%{background: linear-gradient(to right, #080 0%, #800 50%, #080 100%)}
+    50%{background: linear-gradient(to right, #080 0%, #800 100%)}
+    75%{background: linear-gradient(to right, #800 0%, #080 50%, #800 100%)}
+    100%{background: linear-gradient(to right, #800 0%, #080 100%)}
 }
