--- a/pth-upload-enhancer.css
+++ b/pth-upload-enhancer.css
@@ -12,9 +12,9 @@
 }
 
 .pth-upload-drop-target.active {
-	background: linear-gradient(270deg, transparent 0%, transparent 49%, #080 50%, transparent 51%, transparent 100%);
+	background: linear-gradient(to right, transparent 0%, transparent 49%, #080 50%, transparent 51%, transparent 100%);
 	background-size: 200%;
-	animation: pth-active 1s cubic-bezier(0.4, 0, 1, 1) infinite;
+	animation: pth-active 1s linear infinite;
 }
 
 .pth-upload-drop-target.done {	
