--- a/pth-upload-enhancer.css
+++ b/pth-upload-enhancer.css
@@ -1,11 +1,12 @@
 .pth-upload-drop-target {
-    width: 536px;
+    width: 534px;
     height: 30px;
     line-height: 30px;
     font-size: 16px;
     z-index: 10;
     text-align: center;
     position: relative;
+	box-shadow: inset 0 1px 3px rgba(71,54,38,.4);
 }
 
 .pth-upload-drop-target.active {
