--- a/pth-upload-enhancer.css
+++ b/pth-upload-enhancer.css
@@ -1,5 +1,5 @@
 .pth-upload-drop-target {
-    width: 534px;
+    width: 532px;
     height: 30px;
     line-height: 30px;
     font-size: 16px;
@@ -7,6 +7,7 @@
     text-align: center;
     position: relative;
 	box-shadow: inset 0 1px 3px rgba(71,54,38,.4);
+	border: 1px solid #aBaAa9;
 }
 
 .pth-upload-drop-target.active {
