--- a/notwhat.css
+++ b/notwhat.css
@@ -1,4 +1,4 @@
-@import url(https://watceedee.github.io/gazelle/gazelle.css);
+@import url('https://watceedee.github.io/gazelle/gazelle.css');
 
 #logo {
     width: 138px;
