--- a/enhancer.css
+++ b/enhancer.css
@@ -3,7 +3,9 @@
 	top: 0;
 	left: 0;
 	display: none;
-	padding: 2px 8px;	
+	padding: 2px 8px;
+	background: rgba(0,0,0,.8);
+	color: #fff;
 }
 
 .box_albumart img:hover + .rehost-btn {
