--- a/enhancer.css
+++ b/enhancer.css
@@ -1,3 +1,5 @@
+@import url('gazelle-base.css');
+
 .box_albumart .rehost-btn {
 	position: absolute;
 	top: 5px;
@@ -37,17 +39,6 @@
 	color: inherit;
 }
 
-.box_albumart .rehost-btn.active::after,
-.upload-image-drop-target.active::after {
-	content:'';
-	border-left: 1px solid #000;
-	margin-left:10px;
-	display: block;
-	height: 12px;
-	display: inline-block;
-	animation: pth-rotate .7s infinite linear;  	
-}
-
 #upload input[type=file].done,
 .upload-image-drop-target.done {	
 	background: #080;
@@ -70,13 +61,4 @@
 #musicbrainz_tr,
 #musicbrainz_popup {
     display: none;
-}
-
-@keyframes pth-rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
