Update and rename notwhat.css to css/notwhat.css

--- a/css/notwhat.css
+++ b/css/notwhat.css
@@ -1,4 +1,4 @@
-@import url('https://watceedee.github.io/gazelle/gazelle.css');
+@import url('https://watceedee.github.io/gazelle/css/gazelle-base.css');
 
 #logo {
     width: 138px;
