--- a/css/pth.css
+++ b/css/pth.css
@@ -1,4 +1,4 @@
-@import url('https://watceedee.github.io/gazelle/gazelle.css');
+@import url('https://watceedee.github.io/gazelle/css/gazelle.css');
 
 #logo {
     width: 220px;
