--- a/css/enhancer-base.css
+++ b/css/enhancer-base.css
@@ -1,14 +1,14 @@
-.has-spinner-when-active.active::after {
+.ge-has-spinner-when-active.ge-active::after {
 	content:'';
 	border-left: 1px solid #000;
 	margin-left:10px;
 	display: block;
 	height: 12px;
 	display: inline-block;
-	animation: spinner .7s infinite linear;  	
+	animation: ge-spinner .7s infinite linear;  	
 }
 
-@keyframes spinner {
+@keyframes ge-spinner {
   0% {
     transform: rotate(0deg);
   }
