--- a/css/enhancer-base.css
+++ b/css/enhancer-base.css
@@ -1,13 +1,21 @@
 .ge-settings {
+	font-family: Arial;
 	position: fixed;
 	left: 0;
 	top: 50px;
-	font-size: 24px;
 	background: rgba(0,0,0,.7);
 	color: #fc0;
 	padding: 1px 4px;
 	border-radius: 0 5px 5px 0;
 	cursor: pointer;
+}
+
+.ge-settings .label {
+	font-size: 18px;	
+}
+
+.ge-settings .icon {
+	font-size: 24px;
 }
 
 .ge-has-spinner-when-active.ge-active::after {
