--- a/css/enhancer-base.css
+++ b/css/enhancer-base.css
@@ -5,9 +5,11 @@
 	top: 50px;
 	background: rgba(0,0,0,.7);
 	color: #fc0;
-	padding: 1px 4px;
+	padding: 0 4px;
 	border-radius: 0 5px 5px 0;
 	cursor: pointer;
+	height: 24px;
+	line-height: 24px;
 }
 
 .ge-settings .label {
