--- a/css/enhancer-base.css
+++ b/css/enhancer-base.css
@@ -1,24 +1,31 @@
 .ge-settings {
 	font-family: Arial;
 	position: fixed;
-	left: 0;
+	left: -220px;
 	top: 50px;
 	background: rgba(0,0,0,.7);
 	color: #fc0;
 	padding: 0 4px;
 	border-radius: 0 5px 5px 0;
 	cursor: pointer;
-	height: 24px;
-	line-height: 24px;
+	height: 26px;
+	line-height: 26px;
+}
+
+.ge-settings:hover {
+	left: 0px;
+	transition: left .5s ease;
 }
 
 .ge-settings .label {
-	display: inline-block;
-	font-size: 18px;	
+	float: left;
+	font-size: 18px;
+	width: 220px;
+	
 }
 
 .ge-settings .icon {
-	display: inline-block;
+	float: left;
 	font-size: 24px;
 }
 
