--- a/css/gazelle-base.css
+++ b/css/gazelle-base.css
@@ -158,7 +158,7 @@ ul.thin li {
     margin: 0 auto;
     height: 150px;
     padding: 0 0 0 0;
-	overflow: hidden;
+	position: relative;
 }
 #content {
     width: 1050px;
@@ -235,6 +235,40 @@ logo a:focus {
     list-style: none;
     display: block;
 }
+
+#userinfo {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 0;
+	z-index: 11;
+	overflow: hidden;
+	padding-top: 50px;
+	width: 20px;
+}
+
+#userinfo::before {
+    content: '\2630';
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 13pt;
+    line-height: 50px;
+}
+
+#userinfo ul {
+    float: left;
+    clear: both;
+    background: #2B2117;
+    display: block;
+    width: 100%;
+}
+
+#userinfo ul li {
+	float: left;
+	clear: both
+}
+
 #userinfo_username li a,
 #userinfo_minor li a,
 #menu ul li a {
@@ -250,6 +284,8 @@ logo a:focus {
 #menu ul li.active a {
     color: #FCC963;
 }
+
+
 #userinfo_username li a:active,
 #userinfo_username li a:focus,
 #userinfo_username li a:hover,
