--- a/css/gazelle-base.css
+++ b/css/gazelle-base.css
@@ -237,6 +237,16 @@ logo a:focus {
     display: block;
 }
 
+#menu ul li a {
+    color: rgb(235, 234, 233);
+    height: 50px;
+    line-height: 50px;
+    display: block;
+    text-decoration: none;
+    outline: none;
+    padding: 0px 8px;
+}
+
 #menu ul li.active a {
     color: #FCC963;
 }
