--- a/css/gazelle-base.css
+++ b/css/gazelle-base.css
@@ -151,14 +151,16 @@ ul.thin li {
 /* Layout (Every page) */
 
 #wrapper {
-    padding: 0 0 0 0;
+    padding: 90px 0 0 0;
 }
 #header {
     width: 1050px;
-    margin: 0 auto;
+    margin-left: -525px;
     height: 95px;
     padding: 0 0 0 0;
-	position: relative;
+	position: fixed;
+	left: 50%;	
+	top: 0;
 }
 #content {
     width: 1050px;
@@ -325,10 +327,13 @@ logo a:focus {
 }
 
 #searchbars {
-    position: absolute;
+    position: fixed;
     display: block;
     width: 1050px;
-    top: 55px;
+    top: 50px;
+    background: rgba(0,0,0,.7);
+    padding: 5px;
+    box-sizing: border-box;
 }
 
 #searchbars ul {
@@ -341,16 +346,14 @@ logo a:focus {
     list-style: none;
 }
 #searchbars input {
-    background: #473626;
     display: block;
     box-sizing: border-box;
     border: none;
     padding: 0 10px;
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
-    height: 30px;
-    line-height: 30px;
-    color: #EBEAE9;
+    height: 20px;
+    line-height: 20px;
 }
 
 #autocomplete {
