--- a/css/gazelle-base-old.css
+++ b/css/gazelle-base-old.css
@@ -63,12 +63,13 @@ a[href^="https"]{
 
 a[href^="http"]::after, 
 a[href^="https"]::after {
-    content: '\2197';
+    content: '➜';
     font-size: 9pt;
     top: -3px;
     right: 0px;
     position: absolute;
     color: #c00;
+    transform: rotate(-45deg);
 }
 
 h1,
@@ -157,7 +158,7 @@ ul.thin li {
     margin: 0 auto;
     height: 150px;
     padding: 0 0 0 0;
-	position: relative;
+	overflow: hidden;
 }
 #content {
     width: 1050px;
@@ -217,7 +218,6 @@ logo a:focus {
     left: 0;
     right: 0;
     font-size: 11pt;
-    text-transform: uppercase;	
 }
 #menu a {
     color: #EBEAE9;
@@ -235,57 +235,95 @@ logo a:focus {
     list-style: none;
     display: block;
 }
-
+#userinfo_username li a,
+#userinfo_minor li a,
+#menu ul li a {
+    color: #EBEAE9;
+    outline: none;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 8px;
+    display: block;
+    text-decoration: none;
+}
+#userinfo li.active a,
 #menu ul li.active a {
     color: #FCC963;
 }
-
+#userinfo_username li a:active,
+#userinfo_username li a:focus,
+#userinfo_username li a:hover,
+#userinfo_minor li a:active,
+#userinfo_minor li a:focus,
+#userinfo_minor li a:hover,
 #menu ul li a:active,
 #menu ul li a:focus,
 #menu ul li a:hover {
     background: rgba(255,160,96,.2);
 }
-
-
 #userinfo {
-	position: absolute;
-	top: 0;
-	right: 0;
-	height: 0;
-	z-index: 11;
-	overflow: hidden;
-	padding-top: 50px;
-	width: 20px;
+    position: absolute;
+    top: 50px;
+    height: 30px;
+    width: 1050px;
+    z-index: 2;
+    background: #473626;
 }
-
-#userinfo::before {
-    content: '\2630';
+#userinfo_minor,
+#userinfo_username,
+#menu {
+    text-transform: uppercase;
+}
+#userinfo_username,
+#userinfo_minor {
     position: absolute;
     top: 0;
+}
+#userinfo_minor {
     right: 0;
-    font-size: 13pt;
-    line-height: 50px;
 }
-
-#userinfo ul {
-    float: left;
-    clear: both;
-    background: #2B2117;
-    display: block;
-    width: 100%;
-}
-
-#userinfo ul li {
-	float: left;
-	clear: both;
+#userinfo_major li,
+#userinfo_stats li,
+#userinfo_username li,
+#userinfo_minor li {
     list-style: none;
     display: block;
+    float: left;
 }
-
+#userinfo_username li a,
+#userinfo_minor li a {
+    color: #EBEAE9;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 6px;
+}
 #userinfo_stats {
-	display: none;
+    position: absolute;
+    top: 30px;
 }
-
+#userinfo_major li,
+#userinfo_stats li {
+    margin: 0 4px;
+}
+#userinfo_major li a,
+#userinfo_stats li span,
+#userinfo_stats li a {
+    color: #EBEAE9;
+    height: 30px;
+    line-height: 30px;
+}
+#userinfo_major li a:hover,
+#userinfo_stats li a:hover {
+    color:#FCC963;
+}
+#userinfo_major {
+    position: absolute;
+    top: 30px;
+    right: 0;
+}
+#userinfo_major li {
+    float: left;
+}
 #searchbars {
     position: absolute;
     display: block;
@@ -385,7 +423,7 @@ table.no_grouping>tbody>tr.colhead>td:first-child+td {
     margin-left: 5px;
 }
 .last_read a::before {
-    content: 'âžœ';
+    content: '➜';
     line-height: 15px;
 }
 .last_read a {
@@ -896,6 +934,8 @@ input[type="button"]:active,
 input[type="button"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
+    /*	background: #262626 url(images/load.gif) no-repeat center center; */
+    
     display: inline-block;
     padding: 3px 6px 4px;
     margin: 3px;
@@ -1264,7 +1304,7 @@ input[type=checkbox]:checked::before {
 
 input[type=checkbox]:not(:checked)::after,
 input[type=checkbox]:checked::after {
-  content: '\2713';
+  content: '✔';
   position: absolute;
   top: -2px; 
   left: 1px;
@@ -1301,4 +1341,3 @@ input[type=checkbox]:disabled::before {
 input[type=checkbox]:disabled::after {
   color: #999;
 }
-
