--- a/css/gazelle-base-old.css
+++ b/css/gazelle-base-old.css
@@ -172,7 +172,7 @@ ul.thin li {
 }
 
 #content > .thin > .header {
-    padding: 4px 10px;
+    /*padding: 4px 10px;*/
 }
 #alerts {
     padding: 4px 9px;
