--- a/css/gazelle-base-old.css
+++ b/css/gazelle-base-old.css
@@ -161,7 +161,7 @@ ul.thin li {
 }
 
 #content > .thin > .header {
-    /*padding: 4px 10px;*/
+    margin-bottom: 4px;
 }
 #alerts {
     padding: 4px 9px;
