--- a/css/gazelle-base-old.css
+++ b/css/gazelle-base-old.css
@@ -139,18 +139,27 @@ ul.thin li {
 }
 /* Layout (Every page) */
 
+
+#header,
+#content,
+#userinfo,
+#menu ul,
+#searchbars,
+#upload #edition_information {
+
+    width: 1200px;
+}
+
 #wrapper {
     padding: 0 0 0 0;
 }
 #header {
-    width: 1050px;
     margin: 0 auto;
     height: 116px;
     padding: 0 0 0 0;
 	overflow: hidden;
 }
 #content {
-    width: 1050px;
     margin: 0 auto;
     background: #473626;
     overflow: hidden;
@@ -160,6 +169,7 @@ ul.thin li {
 	padding: 10px;	
 }
 
+#content > .thin > h2,
 #content > .thin > .header {
     margin-bottom: 4px;
 }
@@ -217,7 +227,6 @@ logo a:focus {
     flex-flow: row nowrap;
     align-items: flex-start;
     justify-content: flex-end;
-    width: 1050px;
     margin: 0 auto;
 }
 #menu ul li {
@@ -254,7 +263,6 @@ logo a:focus {
     position: absolute;
     top: 36px;
     height: 24px;
-    width: 1050px;
     z-index: 2;
     background: #473626;
 }
@@ -317,7 +325,6 @@ logo a:focus {
 #searchbars {
     position: absolute;
     display: block;
-    width: 1050px;
     top: 84px;
 }
 #searchbars ul {
@@ -730,6 +737,11 @@ tr.torrent td {
 }
 /* Layout (Forums) */
 
+.forum_list > .forum_index,
+.forum_list > h3 {
+	margin-bottom: 4px;
+}
+
 .unread_locked_sticky {
     background: url('images/locked_sticky_unread.png') no-repeat center center;
 }
@@ -1064,7 +1076,6 @@ ul.collage_images a img {
 	border-right: 0; 
 	margin-left: -202px;
 	margin-right: -14px;
-	width: 1050px;
 }
 
 #upload #edition_information tbody {
