--- a/css/gazelle-base-old.css
+++ b/css/gazelle-base-old.css
@@ -731,6 +731,7 @@ tr.torrent td {
 .torrent span {
     font-weight: normal;
     float: right;
+	clear: right;
 }
 .nobr {
     white-space: nowrap;
