--- a/css/gazelle-base-old.css
+++ b/css/gazelle-base-old.css
@@ -1070,6 +1070,10 @@ ul.collage_images a img {
     color: #FF1105;
 }
 
+.tl_free {
+	color: #119462;
+}
+
 
 #upload #edition_information {
 	border: 10px solid #473626;
